# spantools-go

./: .gitignore  README.md  azure-pipelines.yaml  go.mod  go.sum  makefile  pip-freeze.txt  revive.toml  setup.cfg  setup.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_static/: godoc.3.html  godoc.5.html
docs/source/: conf.py
docs/source/_static/: godoc.4.html
encoders/: bson.go  doc.go  encoderType.go  engine.go  json.go  text.go
encoding/: bson.go  doc.go  encoderType.go  engine.go  json.go  text.go
errors_api/: doc.go  errorList.go  initialization.go  model.go  zexamples_test.go
mimetype/: mimetype.go
models/: doc.go  error.go  paging.go
spanerrors/: doc.go  errorList.go  initialization.go  model.go
spantypes/: doc.go  types.go
zdevelop/azure_scripts/: get_release_version.py
zdevelop/azure_templates/: git_setup.yml  go_release_module.yml  go_run_tests.yml  go_setup.yml  python_setup_win.yml  release_gomod.yml  setup_git.yml  setup_go.yml  setup_python.yml  setup_python_win.yml
zdevelop/make_scripts/: make_name.py
zdevelop/tests/: 0_main_test.go  encoder_bson_test.go  encoder_json_test.go  encoder_text_test.go  engine_test.go  errors_test.go  main_test.go  mimetype_test.go  paging_test.go
zdocs/source/: conf.py  index.rst
zdocs/source/_static/: godoc-root.html  godoc.10.html  godoc.100.html  godoc.101.html  godoc.102.html  godoc.103.html  godoc.104.html  godoc.105.html  godoc.106.html  godoc.107.html  godoc.108.html  godoc.109.html  godoc.11.html  godoc.110.html  godoc.111.html  (+576 more)
