[options]
setup_requires = 
	setuptools
install_requires =
dependency_links = 

[options.extras_require]
dev = 
	black
	autopep8
	bumpversion
lint = 
	black
	flake8
	mypy
doc = 
	sphinx
	sphinx-autodoc-typehints
	sphinx-data-fields
	sphinx_rtd_theme
build = 
	twine
	wheel
test = 
	pytest-sugar
	pytest-cov
	pytest-html
	grahamcracker

[mypy-pytest,setuptools]
ignore_missing_imports = True

[build_sphinx]
project = spantools
copyright = '2018, Illuscio'
source-dir = ./zdocs/source
build-dir = ./zdocs/build
