[version]
target = 0.0
release = 0.0.9

[metadata]
name = spantools

[options]
setup_requires = 
	setuptools
install_requires = 
tests_require = 
dependency_links = 

[options.extras_require]
dev = 
lint = 
doc = 
	sphinx
	sphinx_rtd_theme
build = 
	packaging
test = 

[build_sphinx]
project = spantools
copyright = '2020, Illuscio'
source-dir = ./zdocs/source
build-dir = ./zdocs/build

